src/objects/File_Processing__c.object
<CustomObject>
    <description>This is used by business analysis to track file processing.</description>
    <fields>
        <fullName>Client_Account_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>File Processing</relationshipLabel>
        <relationshipName>File_Processing_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>This is the source of the file received.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>ACS-Perkins</fullName>
                </value>
                <value>
                    <fullName>AES/PHEAA</fullName>
                </value>
                <value>
                    <fullName>Aspire</fullName>
                </value>
                <value>
                    <fullName>Campus Partners</fullName>
                </value>
                <value>
                    <fullName>Cornerstone (UT)</fullName>
                </value>
                <value>
                    <fullName>COSTEP</fullName>
                </value>
                <value>
                    <fullName>DELQ</fullName>
                </value>
                <value>
                    <fullName>Demographic File</fullName>
                </value>
                <value>
                    <fullName>DER</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>EdFinancial</fullName>
                </value>
                <value>
                    <fullName>EDGEucation Loans.</fullName>
                </value>
                <value>
                    <fullName>EdManage (SC)</fullName>
                </value>
                <value>
                    <fullName>Granite State (NH)</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Higher Education</fullName>
                </value>
                <value>
                    <fullName>KHESLC (KY)</fullName>
                </value>
                <value>
                    <fullName>MOHELA (MO)</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>OSLA (OK)</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>UAS</fullName>
                </value>
                <value>
                    <fullName>VSAC (VT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>This is the date the file is in the selected status.</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is the status of the file.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>CM Approved</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>File Processing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Processing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Processing</pluralLabel>
    <recordTypes>
        <fullName>File_Processing</fullName>
        <active>true</active>
        <label>File Processing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>